# SuperMarioWorldRecomp

./: .gitignore  CFG_AUDIT_SPIKE.md  CMakeLists.txt  CODEX_ANALYSIS.md  CONTROLLER.md  HANDOFF_VRAM_DIFFER.md  ISSUES.md  NOTES.md  PRIORITIES.md  README.md  RELEASE.md  RELEASE_NOTES_v0.9.6.md  config.ini  smw.ini  smw.sln  snesrecomp.pin
.github/ISSUE_TEMPLATE/: bug.md  bugs.yaml  feature_request.yaml
.github/workflows/: release.yml
_triage/: _check_dump.py  option_a_anchored_diff.py  probe_cfg_bra_test.py  probe_check_rings.py  probe_classify_vs_snes9x.py  probe_db836_phi_first_entry.py  probe_emu_trace_works.py  probe_first_diverge_0a.py  probe_first_diverge_via_rings.py  probe_gfx33_first_div.py  probe_gfx33_full_history.py  probe_k1_byte_diff.py  probe_pre_vs_post_fix.py  probe_test_emit.py  probe_yoshi_classify.py  probe_yoshi_early_writes.py  probe_yoshi_first_div.py  probe_yoshi_slot9_writes.py  probe_yoshi_slot_alloc.py  probe_yoshi_when_diverges.py  run_phi_tests.py
docs/: AUDIT_RECOMP_WIDTH_BUGS.md  GOLDEN_TESTING.md  OPTION_A_DETERMINISTIC_SYNC.md  PHASE_B_DIFFERENTIAL_FUZZ.md  SSA_CONSTRUCTION_DESIGN.md  TROUBLESHOOTING.md  VIRTUAL_HW_AUDIT.md  VIRTUAL_HW_CONTRACT.md  VIRTUAL_HW_INVENTORY.md
docs/superpowers/plans/: 2026-07-19-audio-transition-recovery.md
docs/superpowers/specs/: 2026-07-19-audio-transition-recovery-design.md
overrides/widescreen/: fireball.c  lle_hook.c  overrides.manifest
recomp/: bank00.cfg  bank01.cfg  bank02.cfg  bank03.cfg  bank04.cfg  bank04_bisect_A.cfg  bank04_bisect_B.cfg  bank05.cfg  bank07.cfg  bank0c.cfg  bank0d.cfg  bank10.cfg  bank1f.cfg  bank90.cfg  funcs.h  widescreen_aot_roots.c
recomp/coop/: README.md  bank00.cfg  bank01.cfg  bank02.cfg  bank05.cfg  bank10.cfg  bank1f.cfg  bank90.cfg  smw_coop.ips
recomp/launcher/: boxart.tga
recomp/msu1/: ATTRIBUTION.md  manifest.bml  smw_msu.ips  smw_msu1.asm
scripts/: release-mac.sh
src/: config.c  config.h  consts.h  coop_patch.c  coop_patch.h  dp_sync_bridge.c  gen_stubs.c  lm.c  main.c  post_mortem.c  smw.vcxproj  smw.vcxproj.filters  smw_00.c  smw_0c.c  smw_cpu_infra.c  smw_netplay_lobby.c  smw_netplay_lobby.h  smw_rtl.c  smw_rtl.h  smw_spc_player.c  smw_spc_player.h  variables.h
tests/: run_tests.py  test_function_boundaries.py  test_livein_inference.py
tools/: _parse_level_sprites.py  _ws_chain_probe.py  _ws_oam_trace.py  _ws_spawn_probe.py  apply_msu_patch.py  apply_overrides.py  audit_v1_directive_strip.py  audit_v1_directive_strip_report.md  auto_promote_branches.py  boot_smoke.py  boot_smoke_baseline.json  build-linux.sh  build-macos.sh  create_ips.py  dbg.py  gen_func_registry.py  make_release.ps1  play.ps1  regen.sh  sync_funcs_h.py  tier3_runtime_completeness.py
